Stopping the more details link from jumping...
…back to the top of the page.
Also, toying around with the best layout for mobile.

--- a/css/style.css
+++ b/css/style.css
@@ -4,9 +4,5 @@ html, body {
 }
 
 .tasks-toggle {
-  text-decoration: none;
-}
-
-.tasks {
   display: none;
 }
